@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>500</width>
-    <height>327</height>
+    <height>360</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -102,6 +102,9 @@
      <property name="text">
       <string>Instruments file</string>
      </property>
+     <property name="buddy">
+      <cstring>txtFileInstrument</cstring>
+     </property>
     </widget>
    </item>
    <item row="2" column="1">
@@ -144,6 +147,9 @@
      <property name="text">
       <string>Instrument</string>
      </property>
+     <property name="buddy">
+      <cstring>cboInstrument</cstring>
+     </property>
     </widget>
    </item>
    <item row="3" column="1">
@@ -170,6 +176,9 @@
      <property name="text">
       <string>Keyboard Map</string>
      </property>
+     <property name="buddy">
+      <cstring>txtFileKmap</cstring>
+     </property>
     </widget>
    </item>
    <item row="4" column="1">
@@ -187,6 +196,9 @@
      <property name="text">
       <string>Raw Keyboard Map</string>
      </property>
+     <property name="buddy">
+      <cstring>txtFileRawKmap</cstring>
+     </property>
     </widget>
    </item>
    <item row="5" column="1">
@@ -199,7 +211,7 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0" colspan="3">
+   <item row="7" column="0" colspan="3">
     <widget class="QCheckBox" name="chkStyledKnobs">
      <property name="whatsThis">
       <string>Change the widget (knobs, switches) style, either using the custom look or reverting to the style selected in qtconfig.</string>
@@ -212,7 +224,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="0" colspan="3">
+   <item row="8" column="0" colspan="3">
     <widget class="QCheckBox" name="chkAlwaysOnTop">
      <property name="whatsThis">
       <string>Check this box to keep the keyboard window always visible, on top of other windows.</string>
@@ -222,7 +234,7 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="0" colspan="3">
+   <item row="9" column="0" colspan="3">
     <widget class="QCheckBox" name="chkGrabKb">
      <property name="whatsThis">
       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
@@ -236,7 +248,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="9" column="0" colspan="3">
+   <item row="10" column="0" colspan="3">
     <widget class="QCheckBox" name="chkRawKeyboard">
      <property name="whatsThis">
       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
@@ -253,11 +265,105 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="10" column="0" colspan="3">
+   <item row="11" column="0" colspan="3">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok|QDialogButtonBox::RestoreDefaults</set>
      </property>
+    </widget>
+   </item>
+   <item row="6" column="0">
+    <widget class="QLabel" name="lblDrumsChannel">
+     <property name="text">
+      <string>Drums Channel</string>
+     </property>
+     <property name="buddy">
+      <cstring>cboDrumsChannel</cstring>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QComboBox" name="cboDrumsChannel">
+     <item>
+      <property name="text">
+       <string>None</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>2</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>3</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>4</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>5</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>6</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>7</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>8</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>9</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>10</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>11</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>12</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>13</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>14</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>15</string>
+      </property>
+     </item>
     </widget>
    </item>
   </layout>
@@ -265,6 +371,19 @@ p, li { white-space: pre-wrap; }
  <layoutdefault spacing="6" margin="11"/>
  <tabstops>
   <tabstop>spinNumOctaves</tabstop>
+  <tabstop>btnColor</tabstop>
+  <tabstop>txtFileInstrument</tabstop>
+  <tabstop>btnInstrument</tabstop>
+  <tabstop>cboInstrument</tabstop>
+  <tabstop>txtFileKmap</tabstop>
+  <tabstop>btnKmap</tabstop>
+  <tabstop>txtFileRawKmap</tabstop>
+  <tabstop>btnRawKmap</tabstop>
+  <tabstop>cboDrumsChannel</tabstop>
+  <tabstop>chkStyledKnobs</tabstop>
+  <tabstop>chkAlwaysOnTop</tabstop>
+  <tabstop>chkGrabKb</tabstop>
+  <tabstop>chkRawKeyboard</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
