@@ -1,3 +1,6 @@
+2009-12-08
+    * drums channel, new setting in preferences dialog
+
 2009-12-07
     * extra controls: new button types
 
